<resources>
    <string name="app_name">Marval App</string>
    <string name="your_toke_expired_login_again">your token expired login again</string>
    <string name="some_error">Something went wrong please try again</string>
    <string name="error_no_internet_connection">Please Connect to Internet</string>
    <string name="internal_storage" translatable="false">Internal storage</string>
    <string name="description">Description</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
    <string name="series">Series</string>
    <string name="cancel">Cancel</string>
    <string name="please_check_network_connectoin">please check network connectoin !</string>
    <string name="search_for_character">Search for a character...</string>
    <string name="stories">Stories</string>

</resources>