<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkTransparent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/main_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/mcu_background"
                app:layout_collapseMode="parallax"
                app:riv_corner_radius_bottom_left="20dp"
                app:riv_corner_radius_bottom_right="20dp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/toolbar_back_arrow"
                        android:layout_width="70dp"
                        android:layout_height="@dimen/dp_40"
                        android:background="@drawable/details_back_transparent"
                        android:padding="@dimen/dp_10"
                        android:src="@drawable/ic_baseline_arrow_back"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/collabs_back_arrow"
                android:layout_width="70dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="50dp"
                android:background="@drawable/details_back_transparent"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_baseline_arrow_back" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textColor="@color/title_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:text=" jhjh j njh njh bnhj bn hjb jhb jh bjh bjh hjb hjb hjb hj bhb hb hjv rgdche fdce fdc hf hfg"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:text="@string/comics"
                android:textColor="@color/title_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comics_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/pagination_loader"
                android:layout_below="@+id/header"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_10"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/comic_layout_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:text="@string/events"
                android:textColor="@color/title_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/events_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/pagination_loader"
                android:layout_below="@+id/header"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_10"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/comic_layout_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:text="@string/series"
                android:textColor="@color/title_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/series_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/pagination_loader"
                android:layout_below="@+id/header"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_10"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/comic_layout_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:text="@string/stories"
                android:textColor="@color/title_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stories_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/pagination_loader"
                android:layout_below="@+id/header"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_10"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/comic_layout_item" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/floating_action_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:baselineAlignBottom="false"-->
    <!--        android:clickable="true"-->
    <!--        android:src="@drawable/ic_search_black_24dp"-->
    <!--        app:fabSize="normal"-->
    <!--        app:layout_anchor="@id/appbar_layout"-->
    <!--        app:layout_anchorGravity="bottom|right"-->
    <!--        app:rippleColor="#E4D6D6" />-->


</androidx.coordinatorlayout.widget.CoordinatorLayout>